# rustydns

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  docker-compose.yml  rustydns.example.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/rustydns-authority/: Cargo.toml
crates/rustydns-authority/src/: lib.rs  mesh.rs
crates/rustydns-blocklist/: Cargo.toml
crates/rustydns-blocklist/src/: allowlist.rs  engine.rs  lib.rs  parser.rs
crates/rustydns-core/: Cargo.toml
crates/rustydns-core/src/: client.rs  config.rs  error.rs  ip_denylist.rs  lib.rs  record.rs  regex_rules.rs  schedule.rs
crates/rustydns-resolver/: Cargo.toml
crates/rustydns-resolver/src/: lib.rs  odoh.rs
crates/rustydns-resolver/src/odoh/: tests.rs
crates/rustydns-resolver/tests/: upstream_e2e.rs
crates/rustydnsd/: Cargo.toml
crates/rustydnsd/src/: blocklist_loader.rs  doh.rs  handler.rs  listeners.rs  main.rs  metrics.rs  query_log.rs  query_log_disk.rs  rate_limiter.rs  rewrite.rs  test_pem.rs
crates/rustydnsd/tests/: sighup_reload.rs  startup_warnings.rs
docs/: TODO.md  architecture.md  blocklist-format.md  deployment-docker.md  design-query-log.md  design-sighup-reload.md  integration-rustynet.md  operator-endpoints.md  roadmap.md  security.md
install/: rustydns.service
scripts/: install.sh
