[workspace]
members = [
    "crates/rustydns-core",
    "crates/rustydns-blocklist",
    "crates/rustydns-authority",
    "crates/rustydns-resolver",
    "crates/rustydnsd",
]
resolver = "2"

[workspace.package]
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
authors      = ["Iwan Teague <iwanteague@gmail.com>"]
repository   = "https://github.com/Iwan-Teague/rustydns"

# ---------------------------------------------------------------------------
# Workspace-wide dependency versions — all crates pull from here.
# ---------------------------------------------------------------------------
[workspace.dependencies]
# Async runtime
tokio      = { version = "1",   features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# DNS — hickory-* ONLY (trust-dns-* is unmaintained, do not add)
hickory-server   = { version = "0.26", features = ["tls-ring"] }
hickory-proto    = "0.26"
hickory-resolver = { version = "0.26", features = ["https-ring", "quic-ring", "dnssec-ring", "webpki-roots"] }

# HTTP / TLS — rustls backend only, no openssl
axum              = { version = "0.7", features = ["http2"] }
rustls            = { version = "0.23", features = ["ring"], default-features = false }
rustls-native-certs = "0.7"
rustls-pemfile    = "2"
tokio-rustls      = "0.26"
# HTTP client for blocklist fetching — HTTPS-only, rustls, no openssl
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "gzip",
    "deflate",
    "stream",
] }

# QUIC transport for DNS-over-QUIC
quinn = "0.11"

# Error handling
thiserror = "2"
anyhow    = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
toml  = "0.8"

# Structured logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Lock-free hot-reload of blocklist state
arc-swap = "1"

# Fast, DoS-resistant hashing (randomised seed per process)
ahash = "0.8"

# Async trait helpers
async-trait = "0.1"

# Streams for HTTP body limiting
futures-util = "0.3"

# Bounded concurrent TTL-aware cache for resolver
moka = { version = "0.12", features = ["future"] }

# Prometheus metrics
prometheus = "0.14"

# Verifies the ed25519 signature on the Rustynet dns-zone bundle.
# `default-features = false` drops `rand_core` from the public API surface,
# which we don't need (we only verify, never sign).
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }

# SHA-256 used by Rustynet's dns-zone watermark format.
sha2 = "0.10"

# Zeroize sensitive config fields on drop (tokens, keys)
zeroize = { version = "1", features = ["derive"] }

# Randomise upstream resolver selection
rand = "0.8"

# Base64 for DoH query decoding
base64 = "0.22"

# In-process Linux capability dropping. Pulled in only on Linux targets
# (see crates/rustydnsd/Cargo.toml). macOS dev builds compile without it.
caps = "0.5"

# Test-only: mock HTTP server for resolver integration tests
wiremock = "0.6"

# ---------------------------------------------------------------------------
[profile.release]
lto           = "thin"      # cross-crate inlining, smaller binary
codegen-units = 1
strip         = "symbols"
opt-level     = 3
panic         = "abort"     # no unwinding machinery in binary

[profile.dev]
opt-level = 0
debug     = true
