[package]
name        = "rustydns-authority"
version     = "0.1.0"
description = "Authoritative zone server: mesh zone (rustynet SQLite) + static zones"
edition.workspace    = true
rust-version.workspace = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
rustydns-core = { path = "../rustydns-core" }
hickory-server = { workspace = true }
hickory-proto  = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
thiserror      = { workspace = true }
rusqlite       = { workspace = true }
serde          = { workspace = true }
arc-swap       = { workspace = true }
