[package]
name        = "rustydns-blocklist"
version     = "0.1.0"
description = "Blocklist engine: hosts/plain/RPZ/AdGuard parsing, O(1) lookup, hot-reload"
edition.workspace    = true
rust-version.workspace = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
rustydns-core = { path = "../rustydns-core", version = "0.1.0" }
ahash         = { workspace = true }
arc-swap      = { workspace = true }
tracing       = { workspace = true }
thiserror     = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
