[package]
name        = "rustydns-resolver"
version     = "0.1.0"
description = "Recursive resolver with DoH/DoQ upstream, DNSSEC, query minimisation, no ECS"
edition.workspace    = true
rust-version.workspace = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
rustydns-core    = { path = "../rustydns-core", version = "0.1.0" }
hickory-resolver = { workspace = true }
hickory-proto    = { workspace = true }
tokio            = { workspace = true }
tracing          = { workspace = true }
thiserror        = { workspace = true }
# Resolver builds the TLS config explicitly so `upstream.min_tls_version`
# actually pins the floor (hickory 0.26's rustls 0.23 matches the
# workspace).
rustls           = { workspace = true }
webpki-roots     = "1"
rustls-pki-types.workspace = true

[dev-dependencies]
tokio        = { workspace = true }
# Integration tests use a tiny in-process UDP mock DNS server to drive
# the resolver end-to-end. hickory-proto encodes/decodes the wire
# messages and tokio-util gives us a CancellationToken for clean
# server shutdown between tests.
tokio-util   = { workspace = true }
