[package]
name        = "rustydnsd"
version     = "0.1.0"
description = "rustydns daemon — wires authority, blocklist, and resolver together"
edition.workspace    = true
rust-version.workspace = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[[bin]]
name = "rustydnsd"
path = "src/main.rs"

[dependencies]
rustydns-core      = { path = "../rustydns-core" }
rustydns-blocklist = { path = "../rustydns-blocklist" }
rustydns-authority = { path = "../rustydns-authority" }
rustydns-resolver  = { path = "../rustydns-resolver" }
tokio              = { workspace = true }
tokio-util         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
hickory-server     = { workspace = true }
hickory-proto      = { workspace = true }
axum               = { workspace = true }
prometheus         = { workspace = true }
anyhow             = { workspace = true }
reqwest            = { workspace = true }
rand               = { workspace = true }
serde              = { workspace = true }
toml               = { workspace = true }
async-trait        = { workspace = true }
futures-util       = { workspace = true }
rustls             = { workspace = true }
rustls-pemfile     = { workspace = true }
base64             = { workspace = true }
ahash              = { workspace = true }

# Capability dropping is Linux-only. On other targets `drop_capabilities`
# in main.rs is a no-op stub.
[target.'cfg(target_os = "linux")'.dependencies]
caps = { workspace = true }
