[package]
name        = "rustydnsd"
version     = "0.1.0"
description = "rustydns daemon — wires authority, blocklist, and resolver together"
edition.workspace    = true
rust-version.workspace = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[[bin]]
name = "rustydnsd"
path = "src/main.rs"

[dependencies]
rustydns-core      = { path = "../rustydns-core", version = "0.1.0" }
rustydns-blocklist = { path = "../rustydns-blocklist", version = "0.1.0" }
rustydns-authority = { path = "../rustydns-authority", version = "0.1.0" }
rustydns-resolver  = { path = "../rustydns-resolver", version = "0.1.0" }
tokio              = { workspace = true }
tokio-util         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
hickory-server     = { workspace = true }
hickory-proto      = { workspace = true }
axum               = { workspace = true }
prometheus         = { workspace = true }
anyhow             = { workspace = true }
reqwest            = { workspace = true }
rand               = { workspace = true }
serde              = { workspace = true }
toml               = { workspace = true }
async-trait        = { workspace = true }
futures-util       = { workspace = true }
rustls             = { workspace = true }
rustls-pemfile     = { workspace = true }
base64             = { workspace = true }
ahash              = { workspace = true }

# Capability dropping is Linux-only. On other targets `drop_capabilities`
# in main.rs is a no-op stub.
[target.'cfg(target_os = "linux")'.dependencies]
caps = { workspace = true }

# Unix-only: `nix::sys::stat::umask` is the in-process equivalent of
# systemd's `UMask=0077`. The cfg gate keeps the dep off Windows
# (which it doesn't even compile on).
[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
# DoT integration test connects via TLS against the listener using
# tokio-rustls. Workspace pin matches the runtime rustls 0.23.
tokio-rustls = { workspace = true }
webpki-roots = "1"
